👌 IMPROVE: Updated changeLog generator to adding content